--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+title: Home of Fedor
 ---
-<h1>{{ site.title }}</h1>
+
+<p>This is the landing page.</p>
 <p>And now to something completely different...</p>
+<a href="more.html">More</a>
